# aming-claw

./: .aming-claw.yaml  .coverage  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile.governance  Dockerfile.telegram-gateway  LICENSE  MANIFEST.in  MEMORY.md  README.md  VERSION  WORKFLOW.md  aming_claw.py  deploy-governance.sh  docker-compose.governance-dev.yml  docker-compose.governance.yml  init.ps1  init_project.py  pyproject.toml  setup.ps1  setup.py  start.ps1  start_governance.py
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
agent/: .coverage  ACCEPTANCE_WORKFLOW.md  __init__.py  _i18n_transform.py  _i18n_transform4.py  _patch_locales.py  ai_invocation.py  ai_lifecycle.py  auth.py  backends.py  bot_commands.py  cli.py  config.py  context_assembler.py  context_store.py  coordinator.py  decision_validator.py  deploy_chain.py  execution_sandbox.py  executor.py  executor_api.py  executor_worker.py  git_rollback.py  graph_validator.py  i18n.py  interactive_menu.py  manager_http_server.py  model_registry.py  notification_gateway.py  observer_runtime.py  pipeline_config.py  pipeline_config.yaml.example  plugin_installer.py  project_config.py  project_summary.py  requirements.txt  role_permissions.py  service_manager.py  task_accept.py  task_orchestrator.py  (+7 more)
docs/: ai-agent-integration-guide.md  aming-claw-acceptance-graph.md  architecture-v3-complete.md  architecture-v4-complete.md  architecture-v5-revised.md  architecture-v5-runtime.md  architecture-v6-executor-driven.md  architecture.md  (+25 more)
(+1099 files in other folders)
