[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aming-claw-governance"
version = "0.1.0"
description = "Host-first governance service for the aming-claw workflow platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests==2.32.3",
  "PyYAML>=6.0",
  "networkx>=3.0",
  "redis>=5.0",
]

[project.scripts]
aming-governance = "agent.governance.server:main"
aming-governance-host = "start_governance:main"

[tool.setuptools]
py-modules = ["start_governance"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
namespaces = true
